# Reason

./: .gitignore  CMakeLists.txt  Configure.pl  README  reason.pir
builtins/: CMakeLists.txt  builtins.cpp
cmake/: ReasonCommands.cmake
core/: CMakeLists.txt  builtin.cpp  main.cpp
core/compiler/: CMakeLists.txt  codegen.cpp  node.cpp
core/compiler/include/reason/compiler/: codegen.h
core/datastructures/include/reason/: node.h  sequence.h  sequence.h~
core/parser/: CMakeLists.txt  codegen.cpp  lexer.l  node.cpp  parser.y
core/parser/include/: node.h
core/parser/include/reason/parser/: codegen.h  node.h
src/builtins/: compiler.pir  library.pir  list.pir  math.pir  say.pir  seq.pir  string.pir
src/pct/: actions.pm  grammar.pg
t/: 00-sanity.t  02-def.t  03-let.t  04-fn.t  04-lambda.t  05-macro.t  06-defn.t  07-tcall.t  08-range.t  harness
